# Dawnroot

./: .gitattributes  .gitignore  ARCHITECTURE_DIAGRAM.txt  CHUNK_TEMPLATE_VISUAL_GUIDE.md  COLOR_PALETTE_REFERENCE.md  Cargo.toml  DESIGN_REVIEW_SUMMARY.md  DOWNROOT_IMPLEMENTATION_GUIDE.md  EFFECTS_QUICK_REFERENCE.md  FIX_REPORT.md  GAME_DESIGN_REVIEW.md  LICENSE  QUICK_START.md  QUICK_START_INTEGRATION.md  README.md  SCENE_STRUCTURE.md  SETUP_COMPLETE.md  TRANSFORMATION_REPORT.md  UI_ENHANCEMENT_GUIDE.md  build.rs  dawnroot_meta.json  dawnroot_settings.json  default_bus_layout.tres  project.godot
.cargo/: config.toml
.claude/: settings.local.json
scenes/: flying_enemy.tscn  game_world.tscn  ground_enemy.tscn  heavy_enemy.tscn  main.tscn  player.tscn  turret_enemy.tscn
scripts/: chunk_templates.gd  chunk_templates.gd.uid  destructible_block.gd  destructible_block.gd.uid  downroot_integration.gd  downroot_integration.gd.uid  game_constants.gd  game_constants.gd.uid  game_hud.gd  game_hud.gd.uid  game_root.gd  game_root.gd.uid  game_world.gd  game_world.gd.uid  gem.gd  gem.gd.uid  gunboot_bullet.gd  gunboot_bullet.gd.uid  hazard_spike.gd  hazard_spike.gd.uid  intro_cutscene.gd  intro_cutscene.gd.uid  level_generator.gd  level_generator.gd.uid  main.gd  main.gd.uid  player.gd  player.gd.uid  shop_ui.gd  shop_ui.gd.uid  starting_island.gd  starting_island.gd.uid  tileset_loader.gd  tileset_loader.gd.uid  tutorial_manager.gd  tutorial_manager.gd.uid
src/: altar.rs  animation.rs  audio.rs  camera.rs  combat.rs  constants.rs  death_screen.rs  dialogue.rs  effects.rs  (+17 more)
(+15 files in other folders)
