[package]
name = "dawnroot"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winresource = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
